hometask7: fix task1